--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,7 @@
 DISCORD_BOT_TOKEN = ''
 # Neos events to aggrerate, in the format of 'scheme://host:port'
 SERVERS_EVENT = []
+# Google calendars ID to sync
+CALENDARS_ACCEPTED = []
+# Path to the Google Service Account credentials file
+CREDENTIALS_FILE = ''
