--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,24 @@ services:
   cache:
     image: redis:7.0-alpine
     restart: always
-    ports:
-      - '6379:6379'
     command: redis-server --save 20 1 --loglevel warning
   bots:
     image: community_event:latest
+    restart: always
     command: python bot.py
+    depends_on:
+      - "cache"
     volumes:
       - "./config.toml:/app/config.toml"
+      - "./credentials.json:/app/credentials.json"
   web:
     image: community_event:latest
+    restart: always
     command: gunicorn -w 4 -b 0.0.0.0:5000 app:app
+    depends_on:
+      - "cache"
     volumes:
       - "./config.toml:/app/config.toml"
+      - "./credentials.json:/app/credentials.json"
     ports:
       - '5000:5000'
