--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,13 @@ DISCORD_BOT_TOKEN = ''
 # Neos events to aggrerate, in the format of 'scheme://host:port'
 SERVERS_EVENT = []
 SHOW_WEBUI = true
+
+PRIVATE_DISCORDS = []
+SECRET_KEY = ""
+DISCORD_CLIENT_ID = 
+DISCORD_CLIENT_SECRET = ""
+DISCORD_REDIRECT_URI = ""
+DISCORD_CLIENT_BOT_TOKEN = ""
+
+TWITCH_CLIENT_ID = ""
+TWITCH_SECRET = ""
