Rewrite event collector logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,5 @@ redis
 disnake
 easydict
 jsonschema
-git+https://github.com/brodokk/Flask-Discord@v10_custom#egg=Flask-Discord
+Flask-Discord @ git+https://github.com/brodokk/Flask-Discord@v10_custom#egg=Flask-Discord
 fenkeysmanagement
