Add ability to set the refresh interval in the settings

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 # Neos Events Dev bot
 DISCORD_BOT_TOKEN = ''
+DISCORD_BOT_TOKEN_REFRESH_INTERVAL = 5
 # Neos events to aggrerate, in the format of 'scheme://host:port'
 SERVERS_EVENT = []
 SHOW_WEBUI = true
