Fix bug for show resonite streams

--- a/config.toml
+++ b/config.toml
@@ -19,3 +19,5 @@ DISCORD_CLIENT_BOT_TOKEN = ""
 TWITCH_CLIENT_ID = ""
 TWITCH_SECRET = ""
 TWITCH_STREAMS = ""
+TWITCH_GAME_ID = "1184012414"
+TWITCH_RESONITE_ACCOUNT_NAME = "ResoniteApp"
