--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,22 +6,22 @@ services:
     restart: always
     command: redis-server --save 20 1 --loglevel warning
   bots:
-    image: community_event:latest
+    build: backend
     restart: always
     command: .venv/bin/signals_manager
     depends_on:
       - "cache"
     volumes:
-      - "./config.toml:/app/config.toml"
-      - "./credentials.json:/app/credentials.json"
+      - "./backend/config.toml:/app/config.toml"
+      - "./backend/credentials.json:/app/credentials.json"
   web:
-    image: community_event:latest
+    build: backend
     restart: always
     command: .venv/bin/web_client
     depends_on:
       - "cache"
     volumes:
-      - "./config.toml:/app/config.toml"
-      - "./credentials.json:/app/credentials.json"
+      - "./backend/config.toml:/app/config.toml"
+      - "./backend/credentials.json:/app/credentials.json"
     ports:
       - '5000:8000'
