--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,39 @@
-version: '3.3'
-
 services:
   cache:
     image: redis:7.0-alpine
     restart: always
     command: redis-server --save 20 1 --loglevel warning
   bots:
+    #image: community_event:latest
     build: backend
     restart: always
-    command: .venv/bin/signals_manager
+    #command: signals_manager
+    command: poetry run signals_manager
+    #command: poetry run python -m resonite_communities.server.signals_manager run
     depends_on:
       - "cache"
     volumes:
-      - "./backend/config.toml:/app/config.toml"
-      - "./backend/credentials.json:/app/credentials.json"
+      - "./config.toml:/app/config.toml"
+      - "./credentials.json:/app/credentials.json"
   web:
-    build: backend
+    #image: community_event:latest
+    build: .
     restart: always
-    command: .venv/bin/web_client
+    command: poetry run web_client
     depends_on:
       - "cache"
     volumes:
-      - "./backend/config.toml:/app/config.toml"
-      - "./backend/credentials.json:/app/credentials.json"
+      - "./config.toml:/app/config.toml"
+      - "./credentials.json:/app/credentials.json"
     ports:
       - '5000:8000'
+  worker:
+    #image: community_event:latest
+    build: .
+    restart: always
+    #command: .venv/bin/worker
+    command: celery -A resonite_communities.tasks worker -l info
+    depends_on:
+      - "cache"
+    volumes:
+      - "./config.toml:/app/config.toml"
