--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,12 +5,11 @@ description = "Your project description here"
 authors = ["brodokk <brodokk@brodokk.space>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.12"
 Flask = "^2.3.3"
 requests = "^2.28.1"
 gunicorn = "^21.2.0"
 apscheduler = "^3.10.4"
-toml = "^0.10.2"
 oauth2client = "^4.1.3"
 google-api-python-client = "^2.99.0"
 google-auth-httplib2 = "^0.1.1"
@@ -25,6 +24,10 @@ Flask-Discord = { git = "https://github.com/brodokk/Flask-Discord.git", branch =
 fenkeysmanagement = "^1.0.1"
 resonitepy = { git = "https://github.com/brodokk/resonitepy.git" }
 uvicorn = "^0.24.0.post1"
+celery = "^5.3.6"
+toml = "^0.10.2"
+sqlmodel = "^0.0.21"
+colorlog = "^6.8.2"
 
 [tool.poetry.scripts]
 web_client = "resonite_communities.client.web_client:run"
