Add a first version of a potential way to implement the API

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ celery = "^5.3.6"
 toml = "^0.10.2"
 sqlmodel = "^0.0.21"
 colorlog = "^6.8.2"
+fastapi = {extras = ["standard"], version = "^0.115.4"}
 
 [tool.poetry.scripts]
 web_client = "resonite_communities.client.web_client:run"
