--- a/backend/config.toml
+++ b/backend/config.toml
@@ -15,6 +15,8 @@ SECRET_KEY = "ChangeMe"
 
 FACET_URL = 'ChangeMe'
 
+SECRET = 'ChangeMe'
+
 [Discord]
 client_bot_token = "ChangeMe"
 [Discord.client]
