--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,6 +33,8 @@ fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^14.0.1"}
 asyncpg = "^0.30.0"
 aiosqlite = "^0.20.0"
 pytz = "^2024.2"
+mkdocs = "^1.6.1"
+mkdocs-material = "^9.6.2"
 
 [tool.poetry.scripts]
 web_client = "resonite_communities.clients.web.app:run"
