--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -40,6 +40,7 @@ mkdocs-material = "^9.6.2"
 web_client = "resonite_communities.clients.web.app:run"
 api_client = "resonite_communities.clients.api.app:run"
 signals_manager = "resonite_communities.server.signals_manager:run"
+docs = "server_docs:run"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
