--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -35,6 +35,7 @@ aiosqlite = "^0.20.0"
 pytz = "^2024.2"
 mkdocs = "^1.6.1"
 mkdocs-material = "^9.6.2"
+sentry-sdk = "^2.20.0"
 
 [tool.poetry.scripts]
 web_client = "resonite_communities.clients.web.app:run"
