add back the test doc

--- a/backend/mkdocs.yml
+++ b/backend/mkdocs.yml
@@ -51,6 +51,7 @@ nav:
     - DeveloperGuide/usage.md
     - DeveloperGuide/server-configuration.md
     - DeveloperGuide/server-installation.md
+    - DeveloperGuide/testing.md
     - DeveloperGuide/architecture.md
   - Support:
     - support.md
