--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -36,12 +36,16 @@ pytz = "^2024.2"
 mkdocs = "^1.6.1"
 mkdocs-material = "^9.6.2"
 sentry-sdk = "^2.20.0"
+psycopg = {extras = ["binary"], version = "^3.2.4"}
 
 [tool.poetry.scripts]
 web_client = "resonite_communities.clients.web.app:run"
 api_client = "resonite_communities.clients.api.app:run"
 signals_manager = "resonite_communities.server.signals_manager:run"
 docs = "server_docs:run"
+
+[tool.poetry.group.dev.dependencies]
+alembic = "^1.14.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
