Finish basic container setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,12 @@ WORKDIR /app
 
 RUN pip install poetry
 
-COPY . .
+COPY poetry.lock poetry.lock
+
+COPY pyproject.toml pyproject.toml
+
+COPY resonite_communities resonite_communities
 
 RUN poetry install
+
+COPY . .
