--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build app
-        run: docker compose -f docker-compose.yml -p dev_community_eventsresonite build
+        run: docker compose -f docker-compose.yml -p dev_community_eventsresonite --profile "*" build
 
       - name: Update 3rd party docker containers
-        run: docker compose -f docker-compose.yml -p dev_community_eventsresonite pull
+        run: docker compose -f docker-compose.yml -p dev_community_eventsresonite --profile "*" pull
 
       - name: Spin up containers
-        run: docker compose -f docker-compose.yml -p dev_community_eventsresonite up -d
+        run: docker compose -f docker-compose.yml -p dev_community_eventsresonite --profile "*" up -d
