--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -36,6 +36,7 @@ services:
 
   migrations:
     build: backend
+    #command: poetry run alembic upgrade head
     command: >
       /bin/bash -c "
       poetry run alembic upgrade head;
@@ -64,7 +65,7 @@ services:
       database:
         condition: service_healthy
     volumes:
-      - "./backend/config.toml:/app/config.toml"
+      - "/home/root_man/.config/dev.community_events.resonite.toml:/app/config.toml"
 
   api_client:
     build: backend
@@ -78,22 +79,22 @@ services:
       database:
         condition: service_healthy
     volumes:
-      - "./backend/config.toml:/app/config.toml"
+      - "/home/root_man/.config/dev.community_events.resonite.toml:/app/config.toml"
     ports:
       - '8000:8000'
     labels:
       - traefik.enable=true
 
       # Modern API route
-      - traefik.http.routers.api_client.rule=Host(`resonite-communities.local`) && PathPrefix(`/api`)
+      - traefik.http.routers.api_client.rule=Host(`dev.resonite-communities.com`) && PathPrefix(`/api`)
       - traefik.http.routers.api_client.entrypoints=web
 
       # Private events legacy API route
-      - traefik.http.routers.api_client_legacy_private.rule=Host(`private.resonite-communities.local`) && PathPrefix(`/v1`)
+      - traefik.http.routers.api_client_legacy_private.rule=Host(`adult.dev.resonite-communities.com`) && PathPrefix(`/v1`)
       - traefik.http.routers.api_client_legacy_private.entrypoints=web
 
       # Public events legacy API route
-      - traefik.http.routers.api_client_legacy_public.rule=Host(`resonite-communities.local`) && PathPrefix(`/v1`)
+      - traefik.http.routers.api_client_legacy_public.rule=Host(`dev.resonite-communities.com`) && PathPrefix(`/v1`)
       - traefik.http.routers.api_client_legacy_public.entrypoints=web
 
   web_client:
@@ -108,12 +109,12 @@ services:
       database:
         condition: service_healthy
     volumes:
-      - "./backend/config.toml:/app/config.toml"
+      - "/home/root_man/.config/dev.community_events.resonite.toml:/app/config.toml"
     ports:
       - '8001:8001'
     labels:
       - traefik.enable=true
-      - traefik.http.routers.web_client.rule=Host(`resonite-communities.local`)
+      - traefik.http.routers.web_client.rule=Host(`dev.resonite-communities.com`)
       - traefik.http.routers.web_client.entrypoints=web
 
 
