--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entryPoints.web.address=:80"
+      - "--entryPoints.web.forwardedHeaders.insecure"
       - "--accesslog=true"
     ports:
       - "80:80"
