--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
+      - "--entryPoints.web.forwardedHeaders.insecure"
       - "--entryPoints.web.address=:80"
       - "--accesslog=true"
     ports:
