--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
         exit $EXIT_CODE;
       fi
       "
+    volumes:
+      - "./backend/config.toml:/app/config.toml"
     depends_on:
       database:
         condition: service_healthy
@@ -116,6 +118,21 @@ services:
       - traefik.http.routers.web_client.rule=Host(`resonite-communities.local`)
       - traefik.http.routers.web_client.entrypoints=web
 
+  mkdocs:
+    image: squidfunk/mkdocs-material
+    working_dir: /docs
+    volumes:
+      - ./backend/:/docs
+    ports:
+      - "8002:8000"
+    profiles:
+      - doc
+    stdin_open: true
+    tty: true
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.docs.rule=Host(`docs.resonite-communities.local`)
+      - traefik.http.routers.docs.entrypoints=web
 
 volumes:
   postgres_data:
