--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -136,6 +136,11 @@ services:
       - traefik.http.routers.docs.rule=Host(`docs.dev.resonite-communities.com`)
       - traefik.http.routers.docs.entrypoints=web
 
+  cache:
+    image: redis:7.0-alpine
+    restart: always
+    command: redis-server --save ""
+
 volumes:
   postgres_data:
     driver: local
