Use configuration for CACHE_URL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,6 +137,8 @@ services:
   cache:
     image: redis:7.0-alpine
     restart: always
+    ports:
+    - "6379:6379"
     command: redis-server --save ""
 
 
