--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -39,6 +39,9 @@ psycopg = {extras = ["binary"], version = "^3.2.4"}
 psycopg2-binary = "^2.9.10"
 geoip2 = "^5.0.1"
 fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
+deprecated = "^1.2.18"
+paramiko = "^3.5.1"
+apachelogs = "^0.6.1"
 
 [tool.poetry.scripts]
 web_client = "resonite_communities.clients.web.app:run"
