--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -23,13 +23,13 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_PASSWORD=changeme
-      - POSTGRES_USER=resonitecommunities
-      - POSTGRES_DB=resonitecommunities
+      - POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+      - POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+      - POSTGRES_DB=${{ secrets.POSTGRES_DB }}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U resonitecommunities"]
+      test: ["CMD-SHELL", "pg_isready -U {{ secrets.POSTGRES_USER }}"]
       interval: 1m30s
       timeout: 30s
       retries: 5
