--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -29,7 +29,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${{ secrets.POSTGRES_USER }}"]
+      test: ["CMD-SHELL", "pg_isready -U $${{ secrets.POSTGRES_USER }}"]
       interval: 1m30s
       timeout: 30s
       retries: 5
