--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -23,9 +23,9 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
-      - POSTGRES_USER=${{ secrets.POSTGRES_USER }}
-      - POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+      - POSTGRES_PASSWORD=$${{ secrets.POSTGRES_PASSWORD }}
+      - POSTGRES_USER=$${{ secrets.POSTGRES_USER }}
+      - POSTGRES_DB=$${{ secrets.POSTGRES_DB }}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
