--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -22,6 +22,10 @@ services:
     restart: unless-stopped
     ports:
       - 5432:5432
+    secrets:
+      - postgres_password
+      - postgres_user
+      - postgres_db
     environment:
       - POSTGRES_PASSWORD_FILE=/run/secrets/postgres_password
       - POSTGRES_USER_FILE=/run/secrets/postgres_user
