--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - "--entryPoints.web.address=:80"
       - "--accesslog=true"
     ports:
-      - "80:80"
-      #- "8080:8080"
+      - "81:80"
+      #- "8081:8080"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
 
@@ -21,7 +21,7 @@ services:
       - database
     restart: unless-stopped
     ports:
-      - 5432:5432
+      - 5433:5432
     secrets:
       - postgres_password
       - postgres_user
@@ -33,7 +33,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $$(cat /run/secrets/postgres_user)"]
+      test: ["CMD-SHELL", "pg_isready -U ${{ secrets.POSTGRES_USER }}"]
       interval: 1m30s
       timeout: 30s
       retries: 5
@@ -51,7 +51,7 @@ services:
       fi
       "
     volumes:
-      - "/home/root_man/.config/dev.community_events.resonite.toml:/app/config.toml"
+      - "/home/root_man/.config/prod.community_events.resonite.toml:/app/config.toml"
     depends_on:
       database:
         condition: service_healthy
@@ -71,7 +71,7 @@ services:
       database:
         condition: service_healthy
     volumes:
-      - "/home/root_man/.config/dev.community_events.resonite.toml:/app/config.toml"
+      - "/home/root_man/.config/prod.community_events.resonite.toml:/app/config.toml"
 
   api_client:
     build: backend
@@ -85,23 +85,32 @@ services:
       database:
         condition: service_healthy
     volumes:
-      - "/home/root_man/.config/dev.community_events.resonite.toml:/app/config.toml"
+      - "/home/root_man/.config/prod.community_events.resonite.toml:/app/config.toml"
     ports:
-      - '8000:8000'
+      - '9000:8000'
     labels:
       - traefik.enable=true
 
       # Modern API route
-      - traefik.http.routers.api_client.rule=Host(`dev.resonite-communities.com`) && PathPrefix(`/api`)
+      - traefik.http.routers.api_client.rule=Host(`resonite-communities.com`) && PathPrefix(`/api`)
       - traefik.http.routers.api_client.entrypoints=web
 
       # Private events legacy API route
-      - traefik.http.routers.api_client_legacy_private.rule=Host(`adult.dev.resonite-communities.com`) && PathPrefix(`/v1`)
+      - traefik.http.routers.api_client_legacy_private.rule=Host(`adult.resonite-communities.com`) && PathPrefix(`/v1`)
       - traefik.http.routers.api_client_legacy_private.entrypoints=web
 
+      # Private events legacy API route 2
+      - traefik.http.routers.api_client_legacy_private2.rule=Host(`adult-events.resonite.boltwolf.net`) && PathPrefix(`/v1`)
+      - traefik.http.routers.api_client_legacy_private2.entrypoints=web
+
       # Public events legacy API route
-      - traefik.http.routers.api_client_legacy_public.rule=Host(`dev.resonite-communities.com`) && PathPrefix(`/v1`)
+      - traefik.http.routers.api_client_legacy_public.rule=Host(`resonite-communities.com`) && PathPrefix(`/v1`)
       - traefik.http.routers.api_client_legacy_public.entrypoints=web
+
+      # Public events legacy API route 2
+      - traefik.http.routers.api_client_legacy_public2.rule=Host(`events.resonite.boltwolf.net`) && PathPrefix(`/v1`)
+      - traefik.http.routers.api_client_legacy_public2.entrypoints=web
+
 
   web_client:
     build: backend
@@ -115,13 +124,17 @@ services:
       database:
         condition: service_healthy
     volumes:
-      - "/home/root_man/.config/dev.community_events.resonite.toml:/app/config.toml"
+      - "/home/root_man/.config/prod.community_events.resonite.toml:/app/config.toml"
     ports:
-      - '8001:8001'
+      - '9001:8001'
     labels:
       - traefik.enable=true
-      - traefik.http.routers.web_client.rule=Host(`dev.resonite-communities.com`)
+      - traefik.http.routers.web_client.rule=Host(`resonite-communities.com`)
       - traefik.http.routers.web_client.entrypoints=web
+
+      # Private events legacy API route 2
+      - traefik.http.routers.api_client_legacy_private2.rule=Host(`events.resonite.boltwolf.net`) && PathPrefix(`/v1`)
+      - traefik.http.routers.api_client_legacy_private2.entrypoints=web
 
   mkdocs:
     image: squidfunk/mkdocs-material
@@ -129,14 +142,14 @@ services:
     volumes:
       - ./backend/:/docs
     ports:
-      - "8002:8000"
+      - "9002:8000"
     profiles:
       - doc
     stdin_open: true
     tty: true
     labels:
       - traefik.enable=true
-      - traefik.http.routers.docs.rule=Host(`docs.dev.resonite-communities.com`)
+      - traefik.http.routers.docs.rule=Host(`docs.resonite-communities.com`)
       - traefik.http.routers.docs.entrypoints=web
 
   cache:
