--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -92,24 +92,24 @@ services:
       - traefik.enable=true
 
       # Modern API route
-      - traefik.http.routers.api_client.rule=Host(`resonite-communities.com`) && PathPrefix(`/api`)
-      - traefik.http.routers.api_client.entrypoints=web
+      - traefik.http.routers.prod_api_client.rule=Host(`resonite-communities.com`) && PathPrefix(`/api`)
+      - traefik.http.routers.prod_api_client.entrypoints=web
 
       # Private events legacy API route
-      - traefik.http.routers.api_client_legacy_private.rule=Host(`adult.resonite-communities.com`) && PathPrefix(`/v1`)
-      - traefik.http.routers.api_client_legacy_private.entrypoints=web
+      - traefik.http.routers.prod_api_client_legacy_private.rule=Host(`adult.resonite-communities.com`) && PathPrefix(`/v1`)
+      - traefik.http.routers.prod_api_client_legacy_private.entrypoints=web
 
       # Private events legacy API route 2
-      - traefik.http.routers.api_client_legacy_private2.rule=Host(`adult-events.resonite.boltwolf.net`) && PathPrefix(`/v1`)
-      - traefik.http.routers.api_client_legacy_private2.entrypoints=web
+      - traefik.http.routers.prod_api_client_legacy_private2.rule=Host(`adult-events.resonite.boltwolf.net`) && PathPrefix(`/v1`)
+      - traefik.http.routers.prod_api_client_legacy_private2.entrypoints=web
 
       # Public events legacy API route
-      - traefik.http.routers.api_client_legacy_public.rule=Host(`resonite-communities.com`) && PathPrefix(`/v1`)
-      - traefik.http.routers.api_client_legacy_public.entrypoints=web
+      - traefik.http.routers.prod_api_client_legacy_public.rule=Host(`resonite-communities.com`) && PathPrefix(`/v1`)
+      - traefik.http.routers.prod_api_client_legacy_public.entrypoints=web
 
       # Public events legacy API route 2
-      - traefik.http.routers.api_client_legacy_public2.rule=Host(`events.resonite.boltwolf.net`) && PathPrefix(`/v1`)
-      - traefik.http.routers.api_client_legacy_public2.entrypoints=web
+      - traefik.http.routers.prod_api_client_legacy_public2.rule=Host(`events.resonite.boltwolf.net`) && PathPrefix(`/v1`)
+      - traefik.http.routers.prod_api_client_legacy_public2.entrypoints=web
 
 
   web_client:
@@ -129,12 +129,12 @@ services:
       - '9001:8001'
     labels:
       - traefik.enable=true
-      - traefik.http.routers.web_client.rule=Host(`resonite-communities.com`)
-      - traefik.http.routers.web_client.entrypoints=web
+      - traefik.http.routers.prod_web_client.rule=Host(`resonite-communities.com`)
+      - traefik.http.routers.prod_web_client.entrypoints=web
 
       # Private events legacy API route 2
-      - traefik.http.routers.api_client_legacy_private2.rule=Host(`events.resonite.boltwolf.net`) && PathPrefix(`/v1`)
-      - traefik.http.routers.api_client_legacy_private2.entrypoints=web
+      - traefik.http.routers.prod_api_client_legacy_private2.rule=Host(`events.resonite.boltwolf.net`) && PathPrefix(`/v1`)
+      - traefik.http.routers.prod_api_client_legacy_private2.entrypoints=web
 
   mkdocs:
     image: squidfunk/mkdocs-material
@@ -149,8 +149,8 @@ services:
     tty: true
     labels:
       - traefik.enable=true
-      - traefik.http.routers.docs.rule=Host(`docs.resonite-communities.com`)
-      - traefik.http.routers.docs.entrypoints=web
+      - traefik.http.routers.prod_docs.rule=Host(`docs.resonite-communities.com`)
+      - traefik.http.routers.prod_docs.entrypoints=web
 
   cache:
     image: redis:7.0-alpine
