--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,9 +94,17 @@ services:
       - traefik.http.routers.api_client_legacy_private.rule=Host(`private.resonite-communities.local`) && PathPrefix(`/v1`)
       - traefik.http.routers.api_client_legacy_private.entrypoints=web
 
+      # Private events legacy API route 2
+      - traefik.http.routers.api_client_legacy_private2.rule=Host(`3rd.private.resonite-communities.local`) && PathPrefix(`/v1`)
+      - traefik.http.routers.api_client_legacy_private2.entrypoints=web
+
       # Public events legacy API route
       - traefik.http.routers.api_client_legacy_public.rule=Host(`resonite-communities.local`) && PathPrefix(`/v1`)
       - traefik.http.routers.api_client_legacy_public.entrypoints=web
+
+      # Public events legacy API route 2
+      - traefik.http.routers.api_client_legacy_public2.rule=Host(`3rd.resonite-communities.local`) && PathPrefix(`/v1`)
+      - traefik.http.routers.api_client_legacy_public2.entrypoints=web
 
   web_client:
     build: backend
@@ -117,6 +125,10 @@ services:
       - traefik.enable=true
       - traefik.http.routers.web_client.rule=Host(`resonite-communities.local`)
       - traefik.http.routers.web_client.entrypoints=web
+
+      # Private events legacy API route 2
+      - traefik.http.routers.web_client_legacy_public.rule=Host(`3rd.resonite-communities.local`)
+      - traefik.http.routers.web_client_legacy_public.entrypoints=web
 
   mkdocs:
     image: squidfunk/mkdocs-material
