--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -92,24 +92,28 @@ services:
       - traefik.enable=true
 
       # Modern API route
-      - traefik.http.routers.dev_api_client.rule=Host(`dev.resonite-communities.com`) && PathPrefix(`/api`)
-      - traefik.http.routers.dev_api_client.entrypoints=web
+      - traefik.http.routers.dev_api_v1_client.rule=Host(`dev.resonite-communities.com`) && PathPrefix(`/api`)
+      - traefik.http.routers.dev_api_v1_client.entrypoints=web
 
-      # Private events legacy API route
-      - traefik.http.routers.dev_api_client_legacy_private.rule=Host(`adult.dev.resonite-communities.com`) && PathPrefix(`/v1`)
-      - traefik.http.routers.dev_api_client_legacy_private.entrypoints=web
+      # Private events legacy API v1 route
+      - traefik.http.routers.dev_api_v1_client_legacy_private.rule=Host(`adult.dev.resonite-communities.com`) && PathPrefix(`/v1`)
+      - traefik.http.routers.dev_api_v1_client_legacy_private.entrypoints=web
 
-      # Private events legacy API route
-      - traefik.http.routers.dev_api_client_legacy_private2.rule=Host(`3rd.adult.dev.resonite-communities.com`) && PathPrefix(`/v1`)
-      - traefik.http.routers.dev_api_client_legacy_private2.entrypoints=web
+      # Private events legacy API v1 route
+      - traefik.http.routers.dev_api_v1_client_legacy_private2.rule=Host(`3rd.adult.dev.resonite-communities.com`) && PathPrefix(`/v1`)
+      - traefik.http.routers.dev_api_v1_client_legacy_private2.entrypoints=web
 
-      # Public events legacy API route
-      - traefik.http.routers.dev_api_client_legacy_public.rule=Host(`dev.resonite-communities.com`) && PathPrefix(`/v1`)
-      - traefik.http.routers.dev_api_client_legacy_public.entrypoints=web
+      # Public events legacy API v1 route
+      - traefik.http.routers.dev_api_v1_client_legacy_public.rule=Host(`dev.resonite-communities.com`) && PathPrefix(`/v1`)
+      - traefik.http.routers.dev_api_v1_client_legacy_public.entrypoints=web
 
-      # Public events legacy API route
-      - traefik.http.routers.dev_api_client_legacy_public2.rule=Host(`3rd.dev.resonite-communities.com`) && PathPrefix(`/v1`)
-      - traefik.http.routers.dev_api_client_legacy_public2.entrypoints=web
+      # Public events legacy API v1 route
+      - traefik.http.routers.dev_api_v1_client_legacy_public2.rule=Host(`3rd.dev.resonite-communities.com`) && PathPrefix(`/v1`)
+      - traefik.http.routers.dev_api_v1_client_legacy_public2.entrypoints=web
+
+      # Public events legacy API V2 route
+      - traefik.http.routers.prod_api_v2_client_legacy_public.rule=Host(`resonite-communities.com`) && PathPrefix(`/v2`)
+      - traefik.http.routers.prod_api_v2_client_legacy_public.entrypoints=web
 
   web_client:
     build: .
