--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,12 +6,10 @@
 	"image": "mcr.microsoft.com/devcontainers/base:debian",
 
 	"features": {
-		"ghcr.io/devcontainers/features/docker-in-docker:2.2.1": {
-			"version": "latest",
-			"moby": false,
-			"azureDnsAutoDetection": false,
-			"disableIp6tables": true
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {
+			"version": "latest"
 		},
+		"ghcr.io/devcontainers/features/common-utils:2": {},
 		"ghcr.io/devcontainers/features/python:1": {
 			"version": "3.12"
 		},
@@ -40,9 +38,11 @@
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "docker --version",
 
+	"runArgs": ["--network=host"]
+
 	// Configure tool-specific properties.
 	// "customizations": {},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+	//"remoteUser": "root"
 }
