--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -140,10 +140,9 @@ services:
       - traefik.http.routers.dev_web_client_legacy_public.entrypoints=web
 
   mkdocs:
-    image: squidfunk/mkdocs-material
-    working_dir: /docs
-    volumes:
-      - ./docs:/docs
+    build:
+      context: .
+      dockerfile: Dockerfile.mkdocs
     ports:
       - "8002:8000"
     profiles:
