--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,7 +82,7 @@ services:
     volumes:
       - "./config.toml:/app/config.toml"
     ports:
-      - '8000:8000'
+      - '8010:8000'
     labels:
       - traefik.enable=true
 
@@ -123,6 +123,7 @@ services:
         condition: service_healthy
     volumes:
       - "./config.toml:/app/config.toml"
+      - "./resonitecommunities:/app/resonitecommunities"
     ports:
       - '8001:8001'
     labels:
@@ -131,10 +132,9 @@ services:
       - traefik.http.routers.web_client.entrypoints=web
 
   mkdocs:
-    image: squidfunk/mkdocs-material
-    working_dir: /docs
-    volumes:
-      - ./docs:/docs
+    build:
+      context: .
+      dockerfile: Dockerfile.mkdocs
     ports:
       - "8002:8000"
     profiles:
