--- a/stack-aliases.conf
+++ b/stack-aliases.conf
@@ -1,4 +1,11 @@
+# Docker Compose stack aliases
 prod=prod_community_eventsresonite
 dev=dev_community_eventsresonite
 preprod=dev_community_eventsresonite
 local=community_eventsresonite
+
+# Application configuration file paths
+prod_app_config=/home/root_man/.config/prod.community_events.resonite.toml
+dev_app_config=/home/root_man/.config/dev.community_events.resonite.toml # dev and preprod are the same
+preprod_app_config=/home/root_man/.config/dev.community_events.resonite.toml # dev and preprod are the same
+local_app_config=./config.toml
